tests/bad/10_division_by_zero_1.ris
void main():
    print 42 / 0;
    return;